# ORPFlow

./: .gitattributes  .gitignore  Dockerfile  README.md  render.yaml
.github/workflows/: ci.yml  daily-report.yml  health-check.yml
colab/: 01_lightgbm_training.ipynb  02_xgboost_training.ipynb  03_lstm_training.ipynb  04_cnn_training.ipynb  05_d4pg_evt_training.ipynb  06_marl_training.ipynb  feature_engineering.py  training.ipynb
colab/utils/: __init__.py  data_collector.py  data_splitter.py  feature_engineer.py  leakage_validator.py  metrics_calculator.py  onnx_exporter.py  overfitting_detector.py
core/: dune  dune-project  orp_flow_core.opam
core/lib/orderbook/: dune
core/lib/pnl/: dune
core/lib/risk/: dune  risk.ml
core/lib/types/: dune
core/test/: dune
data/processed/: features.parquet
data/raw/: klines_90d.parquet
deploy/: entrypoint.sh  supervisord.conf
docs/: TRAINING_RUNBOOK.md  rust-port-analysis.md
docs/architecture/: ADR-001-rust-strategy-architecture.md  QUICK-REFERENCE.md  README.md  rust-strategy-data-flow.md  rust-strategy-interfaces.rs  rust-strategy-module-design.md
market-data/: Cargo.toml
market-data/benches/: orderbook_benchmark.rs
market-data/src/: lib.rs  main.rs  parser.rs
market-data/src/orderbook/: book.rs
market-data/src/publisher/: mod.rs
market-data/src/strategy/: broker.rs  config.rs  features.rs  inference_pipeline.rs  ml_inference.rs  mod.rs  models.rs  nsmi.rs  signals.rs  storage.rs
market-data/src/websocket/: client.rs  manager.rs
market-data/tests/: onnx_parity_test.rs
models/: registry.py  requirements.txt  train.py  train_rl_agents.py
models/config/: cnn_config.yaml  lightgbm_config.yaml  lstm_config.yaml  paper_trading_config.yaml  training_config.yaml  xgboost_config.yaml
models/data/: __init__.py  collector.py  preprocessor.py
models/dl/: __init__.py  cnn_model.py  lstm_model.py
models/ensemble/: __init__.py  model_selector.py
models/evaluation/: __init__.py  backtesting.py  metrics.py
models/export/: __init__.py  onnx_exporter.py  onnx_parity.py
models/features/: __init__.py  microstructure.py  quant_features.py
models/ml/: __init__.py  lightgbm_model.py  xgboost_model.py
models/paper_trading/: __init__.py  paper_trader.py
models/rl/: __init__.py  d4pg_evt.py  marl.py
models/training/: __init__.py  orchestrator.py  rl_trainer.py  train_cnn.py  train_lightgbm.py  train_lstm.py  train_xgboost.py
reports/: READINESS_REPORT.md  generate.py
scripts/: comandos.txt  evaluate_models.py  export_onnx.py  fetch_real_data.py  generate_realistic_data.py  regenerate_features.py  train_all.py  train_all_models.py  train_and_evaluate.py  train_dl_models.py
strategy/: Dockerfile.api  __init__.py  pyproject.toml
strategy/src/: replay.py  (+2 more)
trained/: lightgbm_model.pkl  readiness_report.json  xgboost_model.pkl
(+20 files in other folders)
